--- a/data/templates/server.conf
+++ b/data/templates/server.conf
@@ -9,13 +9,13 @@ crl-verify "%s/crl.pem"
 tls-server
 tls-auth "%s/ta.key"
 cipher AES-256-CBC
+client-to-client
 server 10.8.0.0 255.255.255.0
-ifconfig-pool-persist ipp.txt
-client-config-dir ccd
+ifconfig-pool-persist /etc/openvpn/ipp.txt
 push "dhcp-option DNS 8.8.8.8"
 keepalive 10 120
 persist-key
 persist-tun
-status openvpn-status.log
+status /etc/openvpn/openvpn-status.log
 verb 3
 log /var/log/openvpn.log
