--- a/data/templates/client.conf
+++ b/data/templates/client.conf
@@ -1,10 +1,11 @@
 dev tun
-link-mtu 1492
+link-mtu 1500
 proto udp
 remote %s 1197
 resolv-retry infinite
 remote-random
 server-poll-timeout 5
+redirect-gateway def1
 client
 nobind
 ca /home/%s/openvpn/ca.crt
@@ -14,4 +15,7 @@ cipher AES-256-CBC
 tls-auth /home/%s/openvpn/ta.key
 log /var/log/openvpn.log
 verb 4
+script-security 2
+up /etc/openvpn/update-resolv-conf
+down /etc/openvpn/update-resolv-conf
 daemon
